# rust-pretty-assertions

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  qvet.yml
.github/workflows/: check.yml  publish.yml
examples/: pretty_assertion.rs  pretty_assertion_custom.rs  standard_assertion.rs
pretty_assertions/: Cargo.toml
pretty_assertions/examples/: pretty_assertion.rs  standard_assertion.rs
pretty_assertions/src/: config.rs  lib.rs  printer.rs
pretty_assertions/tests/: macros.rs
pretty_assertions_bench/: Cargo.toml  README.md
pretty_assertions_bench/benches/: bench_main.rs  inputs.rs
pretty_assertions_bench/benches/benchmarks/: macros.rs  mod.rs  pretty_diff.rs
pretty_assertions_derive/: Cargo.toml
pretty_assertions_derive/src/: lib.rs
pretty_assertions_derive_tests/: Cargo.toml
pretty_assertions_derive_tests/examples/: assert_emoji.rs
pretty_assertions_derive_tests/src/: lib.rs
pretty_assertions_derive_tests/tests/: assert_eq.rs
scripts/: check  cover  install  publish
src/: comparison.rs  config.rs  format_changeset.rs  lib.rs  printer.rs
tests/: assert_eq.rs  assert_ne.rs  custom_panic.rs  difference.rs  pretty_assertion.rs  pretty_string.rs  test.xml  xml.rs
