[package]
name = "pretty_assertions"
version = "0.3.3"
authors = ["Colin Kiegel <kiegel@gmx.de>", "Florent Fayolle <florent.fayolle69@gmail.com>"]

description = "Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs."
repository = "https://github.com/colin-kiegel/rust-pretty-assertions"
documentation = "https://docs.rs/pretty_assertions"

license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["assert", "diff", "pretty", "color"]
readme = "README.md"

[badges]
travis-ci = { repository = "colin-kiegel/rust-pretty-assertions" }

[dependencies]
difference = "1.0.0"
ansi_term = "0.9.0"
