[package]
name = "pretty_assertions"
version = "0.6.1"
authors = ["Colin Kiegel <kiegel@gmx.de>", "Florent Fayolle <florent.fayolle69@gmail.com>"]
edition = "2018"

description = "Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs."
repository = "https://github.com/colin-kiegel/rust-pretty-assertions"
documentation = "https://docs.rs/pretty_assertions"

license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["assert", "diff", "pretty", "color"]
readme = "README.md"

[badges]
travis-ci = { repository = "colin-kiegel/rust-pretty-assertions" }

[features]
diffstyle_git = []
labels = []

[dependencies]
difference = "2.0.0"
ansi_term = "= 0.11.0"

[dev-dependencies.maybe-unwind]
version = "= 0.1.2"
# * avoid including unneeded "futures" feature to decrease build time
default-features = false

[target.'cfg(windows)'.dependencies]
output_vt100 = "= 0.1.2"
ctor = "= 0.1.9"
